--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile files('libs/beyondar-v0.9.3.jar')
+    compile files('libs/beyondar-radar-plugin-v0.9.1.jar')
 }
