--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dawang.mastery">
 
+    <!-- Minimum permissions for Beyondar -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- For Beyondar this is not mandatory unless you want to load something from Internet (for instance images) -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--  BeyondAR needs the following features-->
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" />
+    <uses-feature android:name="android.hardware.sensor.compass" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".TempActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
